# audio-stem-exporter

./: .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  buildspec.json  install.bat  install.ps1
.github/: FUNDING.yml
.github/workflows/: build.yml
cmake/finders/: FindFFmpeg.cmake
data/locale/: en-US.ini
installer/: audio-stem-exporter.iss
installer/macos/scripts/: postinstall
src/: mp3-writer-filter.cpp  mp3-writer-filter.hpp  mw-dock.cpp  mw-dock.hpp  plugin-main.cpp
